# sprint-CS5500

./: .gitignore  README.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
.history/.github/workflows/: ci_20250408223402.yml  ci_20250408225344.yml  ci_20250408225505.yml  (+19 more)
.history/CommonAssessmentTool/: .env_20250324214358  Dockerfile_20250408215805  Dockerfile_20250408220649  Dockerfile_20250408221223  Dockerfile_20250408221439  Dockerfile_20250408222010  README_20250408213200.md  docker-compose_20250408211845.yml  docker-compose_20250408215434.yml  docker-compose_20250408220648.yml  docker-compose_20250408221301.yml  docker-compose_20250408221449.yml  docker-compose_20250408222322.yml  docker-compose_20250408222748.yml  pyproject_20250324214633.toml  pyproject_20250324214639.toml
CommonAssessmentTool/: README.md  deploy.sh  initialize_data.py  mypy.ini  pyproject.toml
CommonAssessmentTool/.github/workflows/: ci.yml
CommonAssessmentTool/app/: main.py  models 2.py  models.py
CommonAssessmentTool/app/auth/: router.py
CommonAssessmentTool/app/clients/: router.py  schema.py
CommonAssessmentTool/app/clients/ml/models/: base_model.py  intervention_utils.py  logistic_regression.py  ml_router.py  model_manager.py  prediction_logic.py  preprocessing.py  train_logistic.py
CommonAssessmentTool/app/clients/service/: case_assignment_service.py  client_case_service.py  client_filter_service.py  client_repository.py  client_service.py
CommonAssessmentTool/app/ml/: model_list.py  model_state.py  router.py
CommonAssessmentTool/tests/: conftest.py  test_clients.py
(+42 files in other folders)
